[package]
name = "verify-torrent"
version = "0.1.0"
authors = ["tolien <tolien@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.19"
sha1 = "0.10.5"

[dev-dependencies]
hex-literal = "0.4.1"

[profile.dev]
split-debuginfo = "unpacked"
