[package]
name = "verify-torrent"
version = "0.1.0"
authors = ["tolien <tolien@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "0.2.4"
clap = "4.4.18"
serde_derive = "1.0.193"
serde_bytes = "0.11.14"
serde = "1.0.193"
sha1 = "0.10.6"
tokio = { version = "1.29.1", features = ["full"] }
log4rs = "1.2.0"
log = "0.4.20"

[dev-dependencies]
hex-literal = "0.4.1"

[profile.dev]
split-debuginfo = "unpacked"
