[package]
name = "verify-torrent"
version = "0.1.0"
authors = ["tolien <tolien@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "0.2.4"
clap = "4.6.0"
serde_derive = "1.0.228"
serde_bytes = "0.11.19"
serde = "1.0.228"
sha1 = "0.11.0"
tokio = { version = "1.51.0", features = ["full"] }
log4rs = "1.4.0"
log = "0.4.29"

[dev-dependencies]
hex-literal = "1.1.0"

[profile.dev]
split-debuginfo = "unpacked"
